set properly font X-scale for Skia+X11 (tdf#136891)

Change-Id: I715453f6729363e6bf803f8493d91bb260fb808a